--- a/highlights.html
+++ b/highlights.html
@@ -204,7 +204,7 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/vegas.jpg" alt="" data-position="top center" style="height: 600px !important;"/>
+										<img src="images/vegas.JPG" alt="" data-position="top center" style="height: 600px !important;"/>
 									</a>
 									<div class="content" style="background-color: #ff758f !important; border-top: none;">
 										<div class="inner">
@@ -222,9 +222,9 @@
 								</section>
 								<section>
 									<a class="image">
-										<img src="images/ps2.jpg" alt="" data-position="25% 25%" />
+										<img src="images/ps2.JPG" alt="" data-position="25% 25%" />
 										<img src="images/ps3.jpg" alt="" data-position="25% 25%" />
-										<img src="images/ps4.jpg" alt="" data-position="25% 25%" />
+										<img src="images/ps4.JPG" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content" style="background-color: #c9184a !important; border-top: none;">
 										<div class="inner">
