--- a/highlights.html
+++ b/highlights.html
@@ -141,7 +141,7 @@
 									<header class="major">
 										<h2>Note*</h2>
 									</header>
-									<p>* These are ESPECIALLY me biased, so don't start talm bout "be serious!" *</p>
+									<p>* These are ME biased, so don't start talm bout "be serious!" *</p>
 								</div>
 							</section>
 
