--- a/highlights.html
+++ b/highlights.html
@@ -112,7 +112,7 @@
 							<li><a href="storyline/story.html">Our Story</a></li>
 							<li><a href="highlights.html">Highlights</a></li>
 							<li><a href="ourstuff.html">Our Stuff</a></li>
-							<li><a href="generic.html">Dear Sweet Pea</a></li>
+							<li><a href="generic.html">Dear Sweets,</a></li>
 						</ul>
 					</nav>
 
