--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<li><a href="storyline/story.html">Our Story</a></li>
 							<li><a href="highlights.html">Highlights</a></li>
 							<li><a href="ourstuff.html">Our Stuff</a></li>
-							<li><a href="generic.html">Dear Sweet Pea</a></li>
+							<li><a href="generic.html">Dear Sweets,</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#banner" class="button primary fit">Get Started</a></li>
@@ -135,7 +135,7 @@
 										<img src="images/red-background.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="generic.html" class="link">Dear Sweet Pea,</a></h3>
+										<h3><a href="generic.html" class="link">Dear Sweets,</a></h3>
 										<p>straight from da heart</p>
 									</header>
 								</article>
