--- a/storyline/story.html
+++ b/storyline/story.html
@@ -229,7 +229,8 @@
 								<div class="intro color2">
 									<h2 class="major">820 Days</h2>
 									<p> No order, just us.</p>
-								</div>
+									<a href="../index.html" class="button primary color2">Back Home</a>
+									</div>
 								<div class="gallery">
 									<div class="group span-4-5">
 										<a href="images/2_2024.jpg" class="image filtered span-3">
