--- a/generic.html
+++ b/generic.html
@@ -59,21 +59,21 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+					<header id="header" class="alt style2" style="background-color: #000000 !important; border-top: none;">
+						<a href="index.html" class="logo"><strong>Valentine's Day 2026</strong> </a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<nav id="menu" style="background-color: #000000 !important; border-top: none;">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="storyline/story.html">Our Story</a></li>
 							<li><a href="highlights.html">Highlights</a></li>
 							<li><a href="ourstuff.html">Our Stuff</a></li>
-							<li><a href="generic.html">Dear Sweet Pea</a></li>
+							<li><a href="generic.html">Dear Sweets,</a></li>
 						</ul>
 					</nav>
 
@@ -84,13 +84,17 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>A Love Letter</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									
+									<div class="inner">								
+									<p>Dear Sweets (also known as Sweet Pea, Bae, Cupcake, Muffin, and Bri), </p>
+									<p> I love you.</p>
+
+
 								</div>
+
+								<p> Gotchaaa</p>
 							</section>
 
 					</div>
