--- a/highlights.html
+++ b/highlights.html
@@ -212,7 +212,7 @@
 												<h3>#2 Mandalay Bay Escape + Chipotle from God</h3>
 											</header>
 											<p>Dipping out on the day party early to get back to the telly before everyone [+1], Take a "shower" [+1000000],
-												 Order some drunk Chipotle [+10], Take a 4 hour nap w/ my sweets [+20], Spin the block on that bowl cold with them Doritioes [+infinity].
+												 Order some drunk Chipotle [+10], Take a 4 hour nap w/ my sweets [+20], Spin the block on that bowl cold with them Doritos [+infinity].
 
 												 One of the best days of 2025 easily. 
 											</p>
@@ -231,7 +231,7 @@
 											<header class="major">
 												<h3>#1 Playing House in Palm Springs</h3>
 											</header>
-											<p>It's just something when I think about that Palm Springs cooking, going out, watching movies, and listening to the new Drake + PND 
+											<p>It's just something when I think about Palm Springs cooking, going out, watching movies, and listening to the new Drake + PND 
 												that brings me back to a happy place. There was no need for clubs or parties; just throwing down in the kitchen, having some drinks
 												, and enjoying each others' company...loved that little life for us. 
 											</p>
