--- a/storyline/story.html
+++ b/storyline/story.html
@@ -290,7 +290,9 @@
 
 				
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<ul class="copyright">
+								<li>&copy; Stophe+Scoob</li><li> <a>Love ya girl</a></li>
+							</ul>
 
 					</div>
 
